[metadata]
name = Mopidy-Nuvo
version = 0.2.0
url = https://github.com/LegusX/mopidy-nuvo
author = Logan Henrie
author_email = legusx@legusx.dev
license = Apache License, Version 2.0
license_file = LICENSE
description = Mopidy extension for using Nuvo control pads as a Mopidy frontend.
long_description = file: README.rst
classifiers =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Sound/Audio :: Players


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.7
install_requires =
    Mopidy >= 3.0.0
    Pykka >= 2.0.1
    setuptools

[options.entry_points]
mopidy.ext =
    Mopidy-Nuvo = mopidy_Mopidy-Nuvo:Extension
